<resources>
    <string name="app_name">Hipaasafe</string>
    <string name="find_and_connect_with_the_doctors_around_you_chat_with_them">Find and connect with the doctors around you chat with them</string>
    <string name="login_as_doctor_office">Login as Doctor office</string>
    <string name="login_as_patient">Login as Patient</string>
    <string name="login">Login</string>
    <string name="enter_your_details">Enter your details</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="something_went_wrong">Something_went_wrong</string>
    <string name="by_clicking_continu_you_agree_with_our">By clicking \'Continue\' you agree with our \n </string>
    <string name="by_clicking_sign_in_you_agree_with_our">By clicking \'Sign In\' you agree with our \n </string>
    <string name="terms_and_condition">Terms and Condition</string>
    <string name="email">Email</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="_continue">Continue</string>
    <string name="enter_4_digit_otp_sent_to">Enter 4 digit OTP sent to</string>
    <string name="didn_t_received_the_otp_resend_otp">Didn\'t received the otp? Resend OTP</string>
    <string name="didn_t_received_the_otp">Didn\'t received the otp?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="edited">edited</string>
    <string name="video_call">Video call</string>
    <string name="audio_call">Audio Call</string>
    <string name="please_enter_email_id">Please enter email id</string>
    <string name="please_enter_valid_email_id">Please enter valid email id</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="please_enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="please_enter_otp">Please enter OTP</string>
    <string name="please_enter_4_digit_otp">Please enter 4 digit OTP</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_age">Please enter age</string>
    <string name="please_select_dob">Please select date of birth</string>
    <string name="success">Success</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="my_appointments">My Appointments</string>
    <string name="appointments">Appointments</string>
    <string name="my_patients">My Patients</string>
    <string name="my_teams">My Teams</string>
    <string name="choose_date_range">Choose Date Range</string>
    <string name="past_appointments">Past Appointments</string>
    <string name="view_profile">View Profile</string>
    <string name="help_support">Help &amp; Support</string>
    <string name="notification">Notification</string>
    <string name="sign_out">Sign Out</string>
    <string name="help">Help</string>
    <string name="how_can_we_help_you">How can we help you?</string>
    <string name="send_us_an_e_mail">Send us an e-mail</string>
    <string name="you_can_call_us">You can call us</string>
    <string name="info_docusecure_com">info@hipaasafe.com</string>
    <string name="_91_9876543210">+91 9876543210</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notifications">Notifications</string>
    <string name="edit_details">Edit Details</string>
    <string name="view_details">View details</string>
    <string name="my_network">My Network</string>
    <string name="documents">Documents</string>
    <string name="choose_document">Choose Document</string>
    <string name="chat">Chat</string>
    <string name="call_initiate_error">Unable to initiate call</string>
    <string name="channel_description">Voice and Video Call Channel</string>
    <string name="click_on_second_bottom_tab_and_start_a_conversation_with_doctors">Click on third bottom tab and start a \n conversation with doctors</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_chats">No chats</string>
    <string name="you">You</string>
    <string name="this_message_deleted">🚫️ This message was deleted</string>
    <string name="you_deleted_this_message">🚫️ You deleted this message</string>
    <string name="text_copied">Text Copied to clipboard</string>
    <string name="message_audio">🎵 Audio</string>
    <string name="message_image">📷  Photo</string>
    <string name="message_video">📹  Video</string>
    <string name="message_file">📁  File</string>
    <string name="custom_message_location">📍 Location</string>
    <string name="custom_message_sticker">💟 Sticker</string>
    <string name="custom_message_meeting">"📹 Group Call "</string>
    <string name="you_received">You received a %1$s</string>
    <string name="messages_are_in_urgent_need_of_your_attention">Messages are in urgent need of your attention.</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="connecting_to_call">Connecting to call</string>
    <string name="permission_to_access_contacts">Please allow a permission to access contacts</string>
    <string name="permissions_to_update_profile_image">Please allow permissions to update profile image</string>
    <string name="permissions_to_upload_file">Please allow permissions to upload file</string>
    <string name="permissions_to_update_group_picture">Please provide permissions to update group picture</string>
    <string name="is_typing">is Typing…</string>
    <string name="initiated">initiated</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="menu_export_chats">Export Chats</string>
    <string name="menu_share_chats">Share Chats</string>
    <string name="menu_share">Share</string>
    <string name="menu_view_contact">View Contact</string>
    <string name="menu_group_info">Group info</string>
    <string name="menu_search">Search</string>
    <string name="menu_clear_chat">Clear chat</string>
    <string name="menu_delete_chat">Delete and exit chat</string>
    <string name="menu_exit_group">Exit Group</string>
    <string name="delete_group">Delete Group</string>
    <string name="you_won_t_be_able_to_send_and_receive_messages_from_this_person">You won\'t be able to send and receive messages from this person</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_you_want_to_delete_group">Are you sure you want to delete group?</string>
    <string name="are_you_sure_you_want_to_delete_chat">Are you sure you want to delete chat?</string>
    <string name="are_you_sure_you_want_to_clear_chat">Are you sure you want to clear chat?</string>
    <string name="delete_and_exit">Delete &amp; Exit</string>
    <string name="are_you_sure_you_want_to_exit_group">Are you sure you want to exit group ?</string>
    <string name="no_chats_available_for_delete">No chats available for delete</string>
    <string name="gps_enabled">GPS enabled</string>
    <string name="gps_disabled">GPS disabled</string>
    <string name="turn_on_gps">Turn On GPS</string>
    <string name="on">ON</string>
    <string name="unable_to_get_location">Unable to get your location</string>
    <string name="share_location_alert">Are you sure you want to share your location?</string>
    <string name="sending">Sending..</string>
    <string name="grant_location_permission">Please allow location permission</string>
    <string name="search">Search</string>
    <string name="you_can_t_select_more_than_5_conversions">You can\'t select more than 5 conversions</string>
    <string name="please_select_at_least_one_conversation">Please select at least one conversation</string>
    <string name="no_chats_found_to_forward">No chats found to forward</string>
    <string name="added">added</string>
    <string name="kicked_by">kicked</string>
    <string name="removed">Removed</string>
    <string name="left">left</string>
    <string name="kick">kick</string>
    <string name="joined">joined</string>
    <string name="unban">Unban</string>
    <string name="ended">Ended</string>
    <string name="ongoing">Ongoing</string>
    <string name="participant">participant</string>
    <string name="made">made</string>
    <string name="owner">Owner</string>
    <string name="admin">Admin</string>
    <string name="members">Members</string>
    <string name="moderator">Moderator</string>
    <string name="add_members">Add Members</string>
    <string name="join">Join</string>
    <string name="blocked">blocked</string>
    <string name="unblocked">unblocked</string>
    <string name="call_list_error">Unable to fetch Call List</string>
    <string name="no_call_message">You have not made any calls</string>
    <string name="calling">Calling</string>
    <string name="outgoing">Outgoing</string>
    <string name="incoming">Incoming</string>
    <string name="history">History</string>
    <string name="all">All</string>
    <string name="missed">Missed</string>
    <string name="new_call">New Call</string>
    <string name="incoming_audio_call">Incoming Audio Call</string>
    <string name="incoming_video_call">Incoming Video Call</string>
    <string name="missed_call">Missed</string>
    <string name="rejected_call">Rejected</string>
    <string name="ongoing_call">Call is Ongoing</string>
    <string name="missed_voice_call">Missed voice call</string>
    <string name="missed_video_call">Missed video call</string>
    <string name="tap_to_start_conversation">Tap to start conversation</string>
    <string name="not_a_register_user_please_register_again">Not a register user! please register again..</string>
    <string name="no_internet_connection_please_try_again_later">No internet connection. Please try again later</string>
    <string name="no_matching_data_found">No matching data found</string>
    <string name="save_details">Save details</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="select_from">Select from</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="click_here_to_upload_reports_documents">Click here to upload reports/documents</string>
    <string name="doctors_list">Doctors List</string>
    <string name="share">Share</string>
    <string name="share_upload">Share &amp; Upload</string>
    <string name="document">Document</string>
    <string name="click_here_to_upload">Click here to upload</string>
    <string name="enter_name_eg_chest_x_ray">Enter Name (Eg : Chest X-Ray)</string>
    <string name="document_name">Document Name</string>
    <string name="share_to">Share to</string>
    <string name="please_select_at_least_1_doctor">Please select at least 1 doctor</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="deny">Deny</string>
    <string name="forward_message">Forward Message</string>
    <string name="actions">Actions</string>
    <string name="reply_message">Reply Message</string>
    <string name="share_message">Share message</string>
    <string name="copy_message">Copy Message</string>
    <string name="edit_message">Edit Message</string>
    <string name="delete_message">Delete Message</string>
    <string name="message_information">Message Information</string>
    <string name="share_on_efax">Share on eFax</string>
</resources>