<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_appointments"
        android:enabled="true"
        android:icon="@drawable/ic_calendar"
        android:title="@string/appointments" />

    <item
        android:id="@+id/navigation_chat"
        android:enabled="true"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat" />

    <item
        android:id="@+id/navigation_my_network"
        android:enabled="true"
        android:icon="@drawable/ic_patients"
        android:title="@string/my_network" />

    <item
        android:id="@+id/navigation_documents"
        android:enabled="true"
        android:icon="@drawable/ic_doc"
        android:title="@string/documents" />

</menu>