<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:elevation="10dp"
        app:cardCornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAction"
                style="@style/metropolis_semi_bold_small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/actions"
                android:textColor="@color/heather"
                app:layout_constraintEnd_toStartOf="@id/btnClose"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/btnClose"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_close"
                app:layout_constraintBottom_toBottomOf="@id/tvAction"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvAction"
                app:layout_constraintTop_toTopOf="@id/tvAction" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAction">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvReplyMsg"
                    style="@style/metropolis_regular_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:drawableStart="@drawable/ic_reply_message"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/reply_message"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCopyMsg"
                    style="@style/metropolis_regular_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:drawableStart="@drawable/ic_copy_paste"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/copy_message"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvForwardMsg"
                    style="@style/metropolis_regular_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:drawableStart="@drawable/ic_forward_message"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/forward_message"
                    android:visibility="gone"
                    tools:visibility="visible" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvShareOnEfax"
                    style="@style/metropolis_regular_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:drawableStart="@drawable/ic_efax"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/share_on_efax"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvShareMsg"
                    style="@style/metropolis_regular_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:drawableStart="@drawable/ic_share"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/share_message"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvEditMsg"
                    style="@style/metropolis_regular_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:drawableStart="@drawable/ic_edit_2"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/edit_message"
                    android:visibility="gone"
                    app:drawableTint="@color/gray"
                    tools:visibility="visible" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDelete"
                    style="@style/metropolis_regular_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:drawableStart="@drawable/ic_delete"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/delete_message"
                    android:textColor="@color/monza"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvInfo"
                    style="@style/metropolis_regular_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:drawableStart="@drawable/ic_info"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/message_information"
                    android:visibility="gone"
                    tools:visibility="visible" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>