<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:padding="26dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAllowPermission"
            style="@style/metropolis_bold_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:text="@string/allow_permission"
            android:textColor="@color/codGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMsg"
            style="@style/metropolis_regular_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/heather"
            app:layout_constraintTop_toBottomOf="@id/tvAllowPermission"
            tools:text="We need your permission to take photos" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGoToSettings"
            style="@style/metropolis_semi_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/go_to_settings"
            android:textColor="@color/azure_radiance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMsg" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDeny"
            style="@style/metropolis_semi_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/deny"
            android:textColor="@color/monza"
            app:layout_constraintEnd_toStartOf="@id/tvGoToSettings"
            app:layout_constraintTop_toBottomOf="@id/tvMsg"
            app:layout_constraintTop_toTopOf="@id/tvGoToSettings" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>